# termui

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Config.cmake.in  README.md  bind_test.py  license  makefile  readme.md  test.cpp
.github/workflows/: build.yml  check.yml  ci.yml
bindings/: CMakeLists.txt  ansi.cpp  console.cpp  elements.cpp  interfaces.cpp  str.cpp  termui.cpp  util.cpp
docs/: base.md  class-relations.md  display.md  interfaces.md  widgets.md
examples/: CMakeLists.txt
examples/binarymenu/: main.cpp
examples/fancy-menu/: main.cpp
examples/fancymenu/: main.cpp
examples/info-box/: main.cpp
examples/info-page/: main.cpp
examples/infobox/: main.cpp
examples/infopage/: main.cpp
examples/input-page/: main.cpp
examples/inputbox/: main.cpp
examples/inputpage/: main.cpp
examples/menu/: main.cpp
examples/multimenu/: main.cpp
examples/spreadsheet/: main.cpp
examples/text-editor/: main.cpp
examples/toggle-menu/: main.cpp
include/: ansi.hpp  console.hpp  elements.hpp  formatting.hpp  interfaces.hpp  structs.hpp  termui.hpp  unicode.hpp  util.hpp
include/termui/: ansi.hpp  console.hpp  elements.hpp  globals.hpp  interfaces.hpp  str.hpp  termui.hpp  util.hpp
include/termui/core/: border.hpp  color.hpp  padding.hpp  rendering.hpp  str.hpp  style.hpp
include/termui/system/: mouse.hpp  terminal.hpp
include/termui/ui/: ui.hpp
include/termui/ui/base/: input.hpp  padded-text.hpp  pager.hpp  text.hpp
include/termui/ui/display/: area.hpp  box.hpp  lines.hpp  progress-bar.hpp
include/termui/ui/interfaces/: binary-menu.hpp  fancy-menu.hpp  info-box.hpp  info-page.hpp  input-box.hpp  input-page.hpp  interface.hpp  menu.hpp  spreadsheet.hpp  text-editor.hpp  toggle-menu.hpp
include/termui/ui/widgets/: button.hpp  fancy-list.hpp  list.hpp  table.hpp  toggle-list.hpp
src/: binarymenu.cpp  console.cpp  elements.cpp  formatting.cpp  globals.cpp  info.cpp  input.cpp  interfaces.cpp  menu.cpp  str.cpp  table.cpp  util.cpp
src/core/: color.cpp  rendering.cpp  str.cpp  style.cpp
src/elements/: box.cpp  button.cpp  dashedarea.cpp  fancyselect.cpp  input.cpp  list.cpp  listfancy.cpp  listmulti.cpp  multiselect.cpp  progressbar.cpp  select.cpp  spinner.cpp  table.cpp  text.cpp
src/interfaces/: binarymenu.cpp  editor.cpp  info.cpp  infobox.cpp  infopage.cpp  input.cpp  inputbox.cpp  inputpage.cpp  menu.cpp  menufancy.cpp  menumulti.cpp  spreadsheet.cpp  table.cpp
src/structs/: fancylistitem.cpp  listitem.cpp  multilistitem.cpp  tablecolumn.cpp  tablerow.cpp
src/system/: mouse.cpp  terminal.cpp
src/ui/base/: input.cpp  padded-text.cpp  pager.cpp  text.cpp
src/ui/display/: area.cpp  box.cpp  lines.cpp  progress-bar.cpp
src/ui/interfaces/: binary-menu.cpp  fancy-menu.cpp  info-box.cpp  info-page.cpp  input-box.cpp  input-page.cpp  interface.cpp  menu.cpp  spreadsheet.cpp  text-editor.cpp  toggle-menu.cpp
src/ui/widgets/: button.cpp  fancy-list.cpp  list.cpp  table.cpp  toggle-list.cpp
tests/: CMakeLists.txt  test.cpp
